<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/material_blue_grey_800"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideInset"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Button
                android:id="@+id/bttn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="SPEECHSTART"
                android:text="@string/button"
                android:textSize="20sp"
                android:layout_below="@+id/bluetooth"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="STOP"
                android:layout_below="@+id/bluetooth"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/stop"
                android:onClick="stop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/txtspchinpt"
                android:layout_below="@+id/editText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bluetooth"
                android:text="@string/action_bluetooth"
                android:textSize="15sp"
                android:onClick="BLUETOOTHSTART"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobttns"
                android:textSize="25sp"
                android:textColor="#ff59f0ff"
                android:id="@+id/textView"
                android:layout_below="@+id/txtspchinpt"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/engus"
                    android:text="@string/engus"
                    android:textSize="20sp"
                    android:onClick="RADIO"
                    android:textColor="#FFFFFF"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/enguk"
                    android:text="@string/enguk"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:onClick="RADIO"/>
            </RadioGroup>
            <EditText
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/edit"
                android:background="#FFFFFF"
                android:id="@+id/editText"
                android:inputType="numberDecimal"
                android:layout_below="@+id/bttn"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delaybut"
                android:id="@+id/button"
                android:onClick="delay"
                android:layout_alignBottom="@+id/editText"
                android:layout_toRightOf="@+id/editText"
                android:layout_toEndOf="@+id/editText" />



            <ListView
                android:layout_width="312dp"
                android:layout_height="200dp"
                android:id="@+id/devices"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarStyle="insideInset"
                android:visibility="invisible"
                android:layout_alignTop="@+id/button">

            </ListView>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup"
                android:id="@+id/slandsw"
                android:clickable="true"
                android:showText="true"
                android:text="@string/slangswitch"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/slangtext1"
                android:textSize="20sp"
                android:textStyle="italic"
                android:visibility="visible"
                android:layout_below="@+id/slandsw"
                android:id="@+id/slangtxt1"
                android:inputType="text"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/slangtext2"
                android:inputType="text"
                android:textSize="20sp"
                android:visibility="visible"
                android:textStyle="italic"
                android:layout_below="@+id/slangtxt1"
                android:id="@+id/slangtxt2"
                />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slgi"
                android:layout_alignRight="@+id/slangtxt2"
                android:layout_below="@+id/slangtxt1"
                android:onClick="slang"
                android:clickable="true"
                android:text="@string/slangbutton"
                />



        </RelativeLayout>



    </ScrollView>




</RelativeLayout>
